<resources>
    <string name="app_name">Github Final</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="number">Number</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location">Location</string>
    <string name="search">search</string>
    <string name="search_hint">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bio">Biography</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="link">Github Url</string>
    <string name="setting">Setting</string>
    <string name="bad_request">Bad Request</string>
    <string name="forbidden">Forbidden</string>
    <string name="not_found">Not Found</string>
    <string name="not_connected">Check Your Connectivity</string>
    <string name="favorite">favourite</string>
    <string name="set_language">Set Language</string>
    <string name="reminder_setting">Reminder Setting</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="fav">Favourite User</string>
    <string name="appwidget_text">Favourite Github User</string>
    <string name="empty_text">No Data</string>
    <string name="no_fav">Empty Favourite User</string>
    <string name="un_fav">Removed From Favourite</string>
</resources>
