<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_avatar"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:scaleType="centerCrop"
                tools:src="@color/colorPrimaryDark"
                app:civ_border_width="3dp"
                app:civ_border_color="@android:color/white"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_verified_user_white_16dp"
                android:drawablePadding="6dp"
                android:text="@string/username"/>
            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="#fff"
                android:drawableStart="@drawable/ic_person_white_16dp"
                android:drawablePadding="6dp"
                android:text="@string/bio" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_marginStart="4dp"
                android:drawableStart="@drawable/ic_business_center_black_16dp"
                android:drawablePadding="6dp"
                android:text="@string/company" />
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_location_on_black_16dp"
                android:drawablePadding="6dp"
                android:text="@string/location" />
            <TextView
                android:id="@+id/tv_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="#fff"
                android:drawableStart="@drawable/ic_insert_drive_file_black_16dp"
                android:drawablePadding="6dp"
                android:text="@string/number" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="260dp"
            app:tabTextColor="@android:color/white"/>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="415dp"
            android:layout_marginTop="310dp"/>
    </RelativeLayout>
</ScrollView>